--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         正義の血統は、ディオを倒すことはできるのか。<br>
         ぜひ、お読みください！
       </P>
-      <img src="https://m.media-amazon.com/images/I/51BM02ABYDL._AC_UY327_FMwebp_QL65_.jpg" >
+      <img src="https://m.media-amazon.com/images/I/61PHqElhvzL._SY346_.jpg" >
       <a href="https://www.amazon.co.jp/%E6%9C%AC-%E3%82%B8%E3%83%A7%E3%82%B8%E3%83%A7%E3%81%AE%E5%A5%87%E5%A6%99%E3%81%AA%E5%86%92%E9%99%BA/s?rh=n%3A465392%2Cp_28%3A%E3%82%B8%E3%83%A7%E3%82%B8%E3%83%A7%E3%81%AE%E5%A5%87%E5%A6%99%E3%81%AA%E5%86%92%E9%99%BA">amazonから購入</a>
     </div>
   </main>
