--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         　ジョジョの奇妙な冒険という漫画の最大の特徴は、<br>
         partによって、主人公が移り変わっていくことにあります。<br>
         ジョースターの一族と悪のカリスマ、ディオ・ブランドーの<br>
-        百年を超える戦いを描いています。part１の主人公、<br>
+        百年を超える戦いの物語です。part１の主人公、<br>
         ジョナサン・ジョースターから子孫たちに受け継がれていく<br>
-        正義の血統は、ディオを倒すことはできるのか。<br>
+        正義の血統は、ディオを倒すことができるのか。<br>
         ぜひ、お読みください！
       </P>
       <img src="https://m.media-amazon.com/images/I/61PHqElhvzL._SY346_.jpg" >
